Fix - Update ListType and ListItemType
Fix scrollbar appearing in <img> element in DetailedListView
Fix alignment of short titles in DetailedListView
Remove unecessary import + comments in MultiListView
Remove details prop destructuring and add several conditional statements instead to determine which subtype of prop was passed.

--- a/root/frontend/src/components/DetailedListView/DetailedListView.css
+++ b/root/frontend/src/components/DetailedListView/DetailedListView.css
@@ -20,6 +20,7 @@
   width: 181px;
   height: auto;
   box-shadow: 1px 2px 3px 4px rgba(20, 20, 20, 0.4);
+  overflow: hidden;
 }
 
 .header-items {
@@ -28,7 +29,7 @@
   align-self: flex-end;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
 
   margin-right: 5px;
   overflow: hidden;
